NetworkSystem Server Update

--- a/TheMatrix/Assembly-CSharp.csproj
+++ b/TheMatrix/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   <PropertyGroup>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <UnityProjectGenerator>Unity/VSTU</UnityProjectGenerator>
+    <UnityProjectGeneratorVersion>4.8.2.0</UnityProjectGeneratorVersion>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>2019.4.11f1</UnityVersion>
@@ -135,6 +136,7 @@
     <Compile Include="Assets\SubSystem\NetworkSystem\Networking\NetworkObject.cs" />
     <Compile Include="Assets\SubSystem\NetworkSystem\Networking\NetworkPlayer.cs" />
     <Compile Include="Assets\SubSystem\NetworkSystem\Networking\Server.cs" />
+    <Compile Include="Assets\SubSystem\NetworkSystem\Networking\Server_Call.cs" />
     <Compile Include="Assets\SubSystem\NetworkSystem\Networking\Server_Connection.cs" />
     <Compile Include="Assets\SubSystem\NetworkSystem\Networking\Server_Debug.cs" />
     <Compile Include="Assets\SubSystem\NetworkSystem\Networking\Server_Tcp.cs" />
